tests/back-end/fail/masks_1.rav.t
  $ dune exec -- ../../../bin/raven.exe --shh ./masks_1.rav
  [Error] File "./masks_1.rav", line 28, columns 2-10:
  28 |   q(x, v);
         ^^^^^^^^
  Error: Cannot call callable; invariant mask not satisfied
  [1]
